--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://allenneuraldynamics.github.io/aind-ophys-mfish-databook  # Online location of your book
+  url: https://github.com/AllenNeuralDynamics/aind-ophys-mfish-databook/  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
