--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@
 
 title: aind-ophys-mfish-databook
 author: BIRD team, Matt James Davis
-logo: logo.png
+logo: ../data/images/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
